# k2-basecamp

./: .appveyor.yml  .editorconfig  .gitignore  .npmignore  .release.toml  .rustfmt.toml  .travis.yml  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  Makefile.toml  README.md  azure-pipelines.yml  build.rs  gulpfile.js  package-lock.json  package.json  release.toml
.github/workflow/: ci.yml
.github/workflows/: audit.yml  ci.yml  coverage.yml  grcov.yml  publish.yml  test.yml
doc/: settings.md  usage.md
examples/settings-file/: Cargo.toml  ctehxk2.yaml  libctehxk2.toml  libctehxk2.yaml
examples/settings-file/tests/: ct_init.rs  macros.rs
examples/use-library/: Cargo.toml
examples/use-library/tests/: ct-api-functions.rs
intergrationtestung/: Testmatrix.xlsx
src/: config.rs  error.rs  http.rs  lib.rs  logging.rs  macros.rs  settings.rs  tests.rs
src/ctapi/: close.rs  data.rs  init.rs  mod.rs  status.rs
test/: ct_close.spec.js  ct_data.spec.js  ct_init.spec.js  library-ext.js  library-name.js  status.spec.js
tests/: integration_tests.rs  negative.rs  positive.rs
