[package]
name = "ctehxk2"
version = "0.15.11"
description = "CTAPI adpater for the gematik Konnektor"
authors = ["Christian Fochler <fochler@ehealhtexperts.de>"]
license = "MIT"
homepage = "http://k2.ehealthexperts.de"
repository = "https://github.com/eHealthExperts/k2-basecamp.git"
publish = false
build = "build.rs"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
antidote = "1.0.0"
anyhow = "1.0.32"
chrono = "0.4.15"
data-encoding = "2.3.0"
fern = "0.6.0"
log = "0.4.11"
once_cell = "1.4.1"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"
ureq = { version = "1.4.0", features = ["json"] }
url = "2.1.1"

[dependencies.config]
version = "0.10.1"
default-features = false
features = ["ini", "json", "yaml"]

[dev-dependencies]
const-cstr = "0.3.0"
dlopen = "0.1.8"
futures-timer = "3.0.2"
rand = "0.7.3"
serial_test = "0.5.0"
spectral = "0.6.0"
tempfile = "3.1.0"
test-server = { git = "https://github.com/ChriFo/test-server-rs", tag = "0.9.0" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[package.metadata.winres]
FileDescription = "K2 adapter for CTAPI"
FileVersion = "0.15.11"
LegalCopyright = "eHealth Experts GmbH. All rights reserved."
OriginalFilename = "ctehxk2.dll"
ProductName = "K2 basecamp"
ProductVersion = "0.15.11"
