[package]
name = "ctehxk2"
version = "0.15.12"
description = "CTAPI adpater for the gematik Konnektor"
authors = ["Christian Fochler <fochler@ehealhtexperts.de>"]
license = "MIT"
homepage = "http://k2.ehealthexperts.de"
repository = "https://github.com/eHealthExperts/k2-basecamp.git"
publish = false
build = "build.rs"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
antidote = "1.0.0"
anyhow = "1.0.38"
chrono = "0.4.19"
data-encoding = "2.3.1"
fern = "0.6.0"
log = "0.4.13"
once_cell = "1.5.2"
serde = "1.0.120"
serde_derive = "1.0.120"
serde_json = "1.0.61"
ureq = { version = "2.0.1", features = ["json"] }
url = "2.2.0"

[dependencies.config]
version = "0.10.1"
default-features = false
features = ["ini", "json", "yaml"]

[dev-dependencies]
const-cstr = "0.3.0"
dlopen = "0.1.8"
rand = "0.8.2"
serial_test = "0.5.1"
spectral = "0.6.0"
tempfile = "3.2.0"
test-server = { git = "https://github.com/ChriFo/test-server-rs", tag = "0.9.1" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[package.metadata.winres]
FileDescription = "K2 adapter for CTAPI"
FileVersion = "0.15.12"
LegalCopyright = "eHealth Experts GmbH. All rights reserved."
OriginalFilename = "ctehxk2.dll"
ProductName = "K2 basecamp"
ProductVersion = "0.15.12"
