[package]
name = "ctehxk2"
version = "0.15.12"
description = "CTAPI adpater for the gematik Konnektor"
authors = ["Christian Fochler <fochler@ehex.de>"]
license = "MIT"
repository = "https://github.com/eHealthExperts/k2-basecamp.git"
publish = false
build = "build.rs"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
antidote = "1.0.0"
anyhow = "1.0.44"
chrono = "0.4.19"
data-encoding = "2.3.2"
fern = "0.6.0"
log = "0.4.14"
once_cell = "1.8.0"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
ureq = { version = "2.2.0", features = ["json"] }
url = "2.2.2"

[dependencies.config]
version = "0.11.0"
default-features = false
features = ["ini", "json", "yaml"]

[dev-dependencies]
async-std = { version = "*", features = ["attributes"] }
dlopen = "*"
rand = "*"
serial_test = "*"
spectral = "*"
tempfile = "*"
wiremock = "*"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
FileDescription = "K2 adapter for CTAPI"
FileVersion = "0.15.12"
LegalCopyright = "eHealth Experts GmbH. All rights reserved."
OriginalFilename = "ctehxk2.dll"
ProductName = "K2 basecamp"
ProductVersion = "0.15.12"
